# advent_of_code

./: .pre-commit-config.yaml  Day1.ipynb  Day2.ipynb  Day3.ipynb  Day4.ipynb  Day5.ipynb  README.md  pyproject.toml
aoc/: utils.py
days/: Day3.ipynb  Day5.ipynb  Day9.ipynb  day1.py  day2.py  day6.py  day7.py  day9.py
days/notebooks/: Day4.ipynb  Day7.ipynb
tests/: test_day6.py
years/2022/: Day3.ipynb  Day4.ipynb  Day5.ipynb  day1.py  day2.py  day6.py  day7.py  day9.py
years/2023/: day1.py  day2.py  day3.py  day4.py  day6.py  day7.py  day8.py
years/2023/inputs/: input3.txt  input5.txt
