[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Alissa de Bruijn <alissa.de.bruijn@asml.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
ipykernel = "^6.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
