[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Alissa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
pytest = "^7.2.0"
pandas = "^1.5.2"
typer = "^0.7.0"
numpy = "^1.26.2"
yamllint = "^1.33.0"
pyyaml = "^6.0.1"
pre-commit = "^3.5.0"
loguru = "^0.7.2"
pydantic = "^2.5.2"
rich = "^13.7.0"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"